workshop03/nwappv2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nwappv2-deploy
   labels:
      app: northwind
spec:
   replicas: 2
   selector:
      matchLabels:
         app: nwappv2-pod
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1
         maxUnavailable: 1
   template:
      metadata:
         name: nwappv2-pod 
         labels:
            app: nwappv2-pod
      spec:
         containers:
         - name: nwapp-container
           image: stackupiss/northwind-app:v2
           imagePullPolicy: IfNotPresent
           ports:
           - name: nwappv2-port
             containerPort: 3000
           livenessProbe:
              initialDelaySeconds: 5
              periodSeconds: 30
              timeoutSeconds: 5
              failureThreshold: 3
              httpGet:
                 path: /health
                 port: nwappv2-port
---
apiVersion: v1
kind: Service
metadata:
   name: nwappv2-svc
   labels:
      app: northwind
spec:
   type: ClusterIP
   selector:
      app: nwappv2-pod
   ports:
   - name: app-port
     port: 8080
     targetPort: nwappv2-port
