workshop03/fortune-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: myns
  labels: 
    dept: engineering
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-deploy
  namespace: myns
  labels:
    dept: engineering
    app: fortune

spec:
  replicas: 3
  selector:
    matchLabels:
      app: fortune-pod
  template:
    # pod yaml file
    metadata:
      name: fortune-pod
      labels:
        dept: engineering
        app: fortune-pod
    spec:
      containers:
        - name: fortune-container
          image: tanwk3/myapp:v1
          imagePullPolicy: IfNotPresent
          ports:
          - name: http-port
            containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
   name: fortune-svc
   labels:
      app: fortune
spec:
   type: ClusterIP
   selector:
      app: fortune-pod
   ports:
   - name: for-port
     port: 8080
     targetPort: http-port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: fortune-ing
   labels:
      app: fortune
spec:
   rules:
   - host: "fortune.167.172.4.82.nip.io"
     http:
        paths:
        - path: /
          backend:
            serviceName: fortune-svc
            servicePort: for-port
