workshop03/nwapp-ing-copy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: nwapp-ing
   labels:
      app: northwind
   annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/enable-cors: "true"
      nginx.ingress.kubernetes.io/limit-rpm: "15"
      nginx.ingress.kubernetes.io/rewrite-target: /

spec:
   rules:
   - host: "v1.info"
     http:
        paths:
        - path: /v1
          backend:
             serviceName: nwapp-svc
             servicePort: 8080
   - host: "v2.info"
     http:
        paths:
        - path: /
          backend:
             serviceName: nwappv2-svc
             servicePort: 8080
