workshop03/nwapp1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nwapp-deploy
   labels:
      app: northwind
spec:
   replicas: 2
   selector:
      matchLabels:
         app: nwapp-pod
   template:
      metadata:
         name: nwapp-pod 
         labels:
            app: nwapp-pod
      spec:
         containers:
         - name: nwapp-container
           image: tanwk3/myapp:v1
           imagePullPolicy: IfNotPresent
           ports:
           - name: nwapp-port
             containerPort: 3000
           livenessProbe:
              initialDelaySeconds: 5
              periodSeconds: 30
              timeoutSeconds: 5
              failureThreshold: 3
              httpGet:
                 path: /health
                 port: nwapp-port
---
apiVersion: v1
kind: Service
metadata:
   name: nwapp-svc
   labels:
      app: nortwind
spec:
   type: ClusterIP
   selector:
      app: nwapp-pod
   ports:
   - name: app-port
     port: 8080
     targetPort: nwapp-port
---
apiVersion: networking.k8.io/v1beta1
kind: Ingress
metadata:
   name: nwapp-ing
   labels:
      app: northwind
   annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
   rules:
    - host: "nwapp.10.105.121.134.nip.io"
      http: 
         path: /products
         backend:
            serviceName: nwapp-svc
            servicePort: app-port
